upload all files

--- a/products/platingcoating/brassplating/index.html
+++ b/products/platingcoating/brassplating/index.html
@@ -268,7 +268,7 @@
             <div class="badges"><span class="badge">Brass</span><span class="badge">Dark Yellow</span></div>
             <h3 data-i18n-key="dy_title">Dark Yellow Brass Salt</h3>
             <p data-i18n-key="dy_desc">เหมาะทั้งถังกลิ้ง/ถังแขวน ทำงานได้ทั้งอุ่น/เย็น (แนะนำอุ่น) ให้โทนเหลืองทองจัดจ้าน ไล่เฉดเหลืองอ่อนไปถึงเหลืองอมแดง ปรับสีผ่านอุณหภูมิและกระแส ผิวเงาใกล้เคียงทอง 20–24K</p>
-            <a class="more" href="troubleshootingbrass/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingbrass/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -278,7 +278,7 @@
             <div class="badges"><span class="badge">Brass</span><span class="badge">Yellow-Green</span></div>
             <h3 data-i18n-key="gy_title">Greenish Yellow Brass Salt</h3>
             <p data-i18n-key="gy_desc">เหมาะทั้งถังกลิ้ง/ถังแขวน ทำงานได้ทั้งอุ่น/เย็น (แนะนำอุ่น) ให้โทนเหลืองอมเขียว ไล่เฉดได้ด้วยอุณหภูมิและกระแส ให้ผิวสวยโดดเด่น แตกต่าง</p>
-            <a class="more" href="troubleshootingbrass/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingbrass/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -288,7 +288,7 @@
             <div class="badges"><span class="badge">Imitation Gold</span><span class="badge">Cyanide-Free</span></div>
             <h3 data-i18n-key="ig_title">Cyanide-Free Imitation Gold</h3>
             <p data-i18n-key="ig_desc">ระบบปลอดไซยาไนด์ ลดความเสี่ยงด้านความปลอดภัยและสิ่งแวดล้อม ให้ผิวสวยทนทาน เหมาะกับงานที่ต้องการคุณภาพสูงและข้อกำกับด้านสิ่งแวดล้อม</p>
-            <a class="more" href="troubleshootingbrassnoncyanide/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingbrassnoncyanide/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
