--- a/products/platingcoating/copperplating/index.html
+++ b/products/platingcoating/copperplating/index.html
@@ -253,7 +253,7 @@
             <div class="badges"><span class="badge">Alkaline Cyanide</span><span class="badge">Adhesion Undercoat</span></div>
             <h3 data-i18n-key="cya_title">Alkaline Cyanide Copper</h3>
             <p data-i18n-key="cya_desc">เพิ่มการยึดเกาะของทองแดงบนเหล็ก ทองเหลือง เหล็กผสมตะกั่ว และซิงค์ไดคาสต์ เหมาะเป็นชั้นรองพื้นก่อนชุบนิกเกิล/โครเมียม เคลือบสม่ำเสมอ คุมง่าย ทนกัดกร่อนดี</p>
-            <a class="more" href="troubleshootingcoppercyanide/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcoppercyanide/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -264,7 +264,7 @@
             <div class="badges"><span class="badge">Alkaline Non-Cyanide</span><span class="badge">Safer / Eco</span></div>
             <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper</h3>
             <p data-i18n-key="ncn_desc">เลี่ยงไซยาไนด์แต่คงข้อดีของระบบด่าง ให้ผิวเรียบเงา การกระจายตัวดี ลดความเสี่ยงและขั้นตอนบำบัดของเสีย เหมาะกับชิ้นงานหลากหลาย</p>
-            <a class="more" href="troubleshootingcoppernon-cyanide/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcoppernon-cyanide/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -275,7 +275,7 @@
             <div class="badges"><span class="badge">Acid Copper</span><span class="badge">High Brightness</span></div>
             <h3 data-i18n-key="acid_title">Acid Copper Plating</h3>
             <p data-i18n-key="acid_desc">ใช้กับกรดกำมะถัน ให้ความเงาสูง ประสิทธิภาพชุบดี ครอบคลุมมุมลึก เคลือบหนาได้ง่าย ผิวเรียบไร้รูพรุน ยืดหยุ่น ทนกัดกร่อน คุมบ่อและเติมสารง่าย</p>
-            <a class="more" href="troubleshootingacidcopper/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingacidcopper/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
