--- a/products/platingcoating/electrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/index.html
@@ -366,7 +366,7 @@
             <div class="badges"><span class="badge">Acrylic</span><span class="badge">E-coat</span></div>
             <h3 data-i18n-key="acr_title">Acrylic Electrophoretic Lacquer</h3>
             <p data-i18n-key="acr_desc">เรซินอะคริลิคให้ฟิล์มเงาสูง ทนการกัดกร่อนและสารเคมี ช่วยป้องกันสนิมและยกระดับลุคของชิ้นงาน เหมาะเครื่องใช้ไฟฟ้า ของตกแต่ง และยานยนต์</p>
-            <a class="more" href="troubleshootingelectrophoreticlacquer/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingelectrophoreticlacquer/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -379,7 +379,7 @@
             <div class="badges"><span class="badge">Polyurethane</span><span class="badge">E-coat</span></div>
             <h3 data-i18n-key="pu_title">Polyurethane Electrophoretic Lacquer</h3>
             <p data-i18n-key="pu_desc">ให้ความทนรอยขีดข่วนและการสึกหรอสูง พร้อมการป้องกันการกัดกร่อน ยึดเกาะดี ทนสภาพแวดล้อม เหมาะงานยานยนต์ อิเล็กทรอนิกส์ และอุปกรณ์การแพทย์</p>
-            <a class="more" href="troubleshootingelectrophoreticlacquerpolyurethane/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingelectrophoreticlacquerpolyurethane/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
