--- a/products/platingcoating/nickelplating/index.html
+++ b/products/platingcoating/nickelplating/index.html
@@ -347,7 +347,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Bright Nickel</span><span class="badge">Rack / Barrel</span></div>
             <h3 data-i18n-key="bright_title">Bright Nickel Plating</h3>
             <p data-i18n-key="bright_desc">ป็นน้ำยาที่ช่วยให้การชุบนิกเกิลมี ความเงาเหมือนกระจก ทั่วทั้งชิ้นงานแม้ในบริเวณที่เข้าถึงยาก ให้ความเงาสูงได้ทั้งช่วงกระแสกลาง–ต่ำ สามารถใช้ได้กับโลหะหลากหลายประเภท และเหมาะสำหรับทั้งระบบการชุบแบบถังแขวนและถังกลิ้ง.</p>
-            <a class="more" href="troubleshootingnickel/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnickel/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -358,7 +358,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Black Nickel</span><span class="badge">Decorative</span></div>
             <h3 data-i18n-key="black_title">Black Nickel Plating</h3>
             <p data-i18n-key="black_desc">กระบวนการชุบเคลือบผิวด้วยนิกเกิลผสมกับสารอื่น ๆ เพื่อให้ได้ผิวชิ้นงานที่มีสีดำด้านถึงดำสนิท โดยไม่เงาวาวเหมือนการชุบนิกเกิลทั่วไป การชุบชนิดนี้ช่วยลดการสะท้อนแสงและเพิ่มความทนทานต่อการกัดกร่อน</p>
-            <a class="more" href="troubleshootingblacknickel/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingblacknickel/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -369,7 +369,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Satin Nickel</span><span class="badge">Matte Finish</span></div>
             <h3 data-i18n-key="satin_title">Satin Nickel Plating</h3>
             <p data-i18n-key="satin_desc">น้ำยาชุบนี้ให้ผิวชิ้นงาน ผิวด้านที่เนียนเรียบ ทั่วถึงทุกส่วน เหมาะสำหรับการเป็นชั้นรองพื้นก่อนชุบโครเมียม คุณสามารถ ปรับระดับความด้าน ได้ตามต้องการ และใช้ได้กับระบบชุบแบบถังแขวน</p>
-            <a class="more" href="troubleshootingnickelsatin/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnickelsatin/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -380,7 +380,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">EN (High-P)</span><span class="badge">Rack / Barrel</span></div>
             <h3 data-i18n-key="en_title">Electroless Nickel Plating</h3>
             <p data-i18n-key="en_desc">กระบวนการชุบที่ใช้สารเคมีในสารละลาย Electroless Nickel ที่มีความเสถียรและควบคุมง่ายในการเคลือบผิวชิ้นงานแทนการใช้ไฟฟ้า เหมาะสำหรับการชุบชิ้นงานที่มีรูปทรงซับซ้อนหรือมีขนาดเล็กมาก และให้ความหนาสม่ำเสมอทั่วทั้งชิ้น</p>
-            <a class="more" href="troubleshootingennickel/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingennickel/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -391,7 +391,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Chromium</span><span class="badge">Over Nickel</span></div>
             <h3 data-i18n-key="chrome_title">Chromium Plating</h3>
             <p data-i18n-key="chrome_desc">เป็นกระบวนการเคลือบผิวด้วยโครเมียมชั้นบาง ๆ บนชุบนิกเกิลเงาเพื่อเพิ่มความเงาวาวสีขาว ให้กับชิ้นงานและช่วยเพิ่มความทนทานต่อการสึกหรอ. กระบวนการนี้เหมาะอย่างยิ่งสำหรับระบบถังแขวน ซึ่งใช้กับชิ้นงานที่ต้องการความละเอียดและความสวยงามเป็นพิเศษ</p>
-            <a class="more" href="troubleshootinghardchrome/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootinghardchrome/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -402,7 +402,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Hard Chrome</span><span class="badge">Wear Resistance</span></div>
             <h3 data-i18n-key="hchrome_title">Hard Chrome Plating</h3>
             <p data-i18n-key="hchrome_desc">การชุบโครเมียมแข็งเป็นการเคลือบผิวชิ้นงานด้วยโครเมียมที่หนากว่าปกติ เพื่อเพิ่มความทนทานต่อการสึกหรอและรอยขีดข่วนอย่างยอดเยี่ยม เหมาะสำหรับชิ้นส่วนเครื่องจักรกลหนัก เช่น โรลเลอร์ และ แท่งกระบอกไฮดรอลิก กระบวนการนี้ใช้ระบบถังแขวนและสามารถปรับความหนาของชั้นชุบได้</p>
-            <a class="more" href="troubleshootinghardchrome/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootinghardchrome/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
