--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -369,7 +369,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Cyanide</span><span class="badge">ถังกลิ้งและถังแขวน</span></div>
             <h3 data-i18n-key="cya_title">Cyanide Zinc Plating Solution</h3>
             <p data-i18n-key="cya_desc">การกระจายผิวยอดเยี่ยม คุมง่าย ทนต่อการปนเปื้อนน้ำมัน เงาสูง ทำงานได้ในช่วงความหนาแน่นกระแสกว้าง และเข้ากันได้กับโครเมตทุกเฉด เหมาะทั้งถังแขวนและถังกลิ้ง</p>
-            <a class="more" href="troubleshootingcyanidezinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcyanidezinc/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -382,7 +382,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Acid (Ammonium)</span><span class="badge">High Coverage</span></div>
             <h3 data-i18n-key="acid_title">Ammonium Acid Zinc Plating</h3>
             <p data-i18n-key="acid_desc">ให้ผิวชิ้นงานเงางามและสม่ำเสมอทั่วทั้งชิ้น แม้ในซอกลึกที่เข้าถึงยาก สารเคมีที่ใช้ละลายน้ำและล้างออกได้ง่าย ช่วยให้การเคลือบโครเมตยึดเกาะได้ดี และเหมาะสำหรับทั้งแบบถังกลิ้งและถังแขวน</p>
-            <a class="more" href="troubleshootingacidzinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingacidzinc/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -395,7 +395,7 @@ body.no-scroll{ position:fixed; width:100% }
             <div class="badges"><span class="badge">Non-Cyanide</span><span class="badge">NaOH / KOH</span></div>
             <h3 data-i18n-key="ncn_title">Cyanide-Free Zinc Plating</h3>
             <p data-i18n-key="ncn_desc">ปลอดไซยาไนด์ ลดความเสี่ยงต่อคนและสิ่งแวดล้อม เงาสูง คุมง่าย กระจายผิวดี ใช้ได้กับ NaOH/KOH และชุบได้โดยตรงบนเหล็ก เหล็กผสมตะกั่ว หรือซิงค์ไดคาสต์</p>
-            <a class="more" href="troubleshootingnoncyanidezinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnoncyanidezinc/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
